tests/samples/negative/functions/function_prototype_mismatch.ax
module function_prototype_mismatch;

fn value() -> i32;

fn value() -> bool {
    return true;
}

fn main() -> i32 {
    return 0;
}
